chore: group data-catalog test dependencies together (#1304)
* chore: group data-catalog test dependencies together

To avoid upperbounddependency errors when data-catalog updates come in

* Update renovate.json

* Update synth.py

--- a/renovate.json
+++ b/renovate.json
@@ -66,6 +66,15 @@
         "^com.fasterxml.jackson.core"
       ],
       "groupName": "jackson dependencies"
+    },
+    {
+      "packagePatterns": [
+        "^com.google.api.grpc:proto-google-cloud-datacatalog",
+        "^com.google.cloud:google-cloud-datacatalog"
+      ],
+      "groupName": "datacatalog dependencies",
+      "semanticCommitType": "test",
+      "semanticCommitScope": "deps"
     }
   ],
   "semanticCommits": true,
