--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,7 @@
   </build>
 
   <modules>
+    <module>datastore-v1-proto-client</module>
     <module>proto-google-cloud-datastore-v1</module>
     <module>google-cloud-datastore</module>
     <module>google-cloud-datastore-bom</module>
