--- a/.github/release-please.yml
+++ b/.github/release-please.yml
@@ -1,3 +1,8 @@
 bumpMinorPreMajor: true
 handleGHRelease: true
 releaseType: java-yoshi
+branches:
+  - bumpMinorPreMajor: true
+    handleGHRelease: true
+    releaseType: java-lts
+    branch: 1.106.5-sp
