--- a/java-language/google-cloud-language-bom/pom.xml
+++ b/java-language/google-cloud-language-bom/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.cloud</groupId>
@@ -60,7 +60,11 @@
 
   <dependencyManagement>
     <dependencies>
-
+      <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-language</artifactId>
+        <version>1.102.4-SNAPSHOT</version><!-- {x-version-update:google-cloud-language:current} -->
+      </dependency>
       <dependency>
         <groupId>com.google.api.grpc</groupId>
         <artifactId>grpc-google-cloud-language-v1</artifactId>
@@ -75,11 +79,6 @@
         <groupId>com.google.api.grpc</groupId>
         <artifactId>proto-google-cloud-language-v1</artifactId>
         <version>1.84.4-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-language-v1:current} -->
-      </dependency>
-      <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-language</artifactId>
-        <version>1.102.4-SNAPSHOT</version><!-- {x-version-update:google-cloud-language:current} -->
       </dependency>
       <dependency>
         <groupId>com.google.api.grpc</groupId>
