--- a/java-mediatranslation/google-cloud-mediatranslation-bom/pom.xml
+++ b/java-mediatranslation/google-cloud-mediatranslation-bom/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.cloud</groupId>
@@ -60,7 +60,6 @@
 
   <dependencyManagement>
     <dependencies>
-
       <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-mediatranslation</artifactId>
@@ -68,13 +67,13 @@
       </dependency>
       <dependency>
         <groupId>com.google.api.grpc</groupId>
-        <artifactId>proto-google-cloud-mediatranslation-v1beta1</artifactId>
-        <version>0.4.1-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-mediatranslation-v1beta1:current} -->
+        <artifactId>grpc-google-cloud-mediatranslation-v1beta1</artifactId>
+        <version>0.4.1-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-mediatranslation-v1beta1:current} -->
       </dependency>
       <dependency>
         <groupId>com.google.api.grpc</groupId>
-        <artifactId>grpc-google-cloud-mediatranslation-v1beta1</artifactId>
-        <version>0.4.1-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-mediatranslation-v1beta1:current} -->
+        <artifactId>proto-google-cloud-mediatranslation-v1beta1</artifactId>
+        <version>0.4.1-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-mediatranslation-v1beta1:current} -->
       </dependency>
     </dependencies>
   </dependencyManagement>
