--- a/java-gsuite-addons/proto-google-apps-script-type-protos/pom.xml
+++ b/java-gsuite-addons/proto-google-apps-script-type-protos/pom.xml
@@ -3,9 +3,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>google-cloud-gsuite-addons-parent</artifactId>
     <groupId>com.google.cloud</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>google-cloud-gsuite-addons-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-gsuite-addons:current} -->
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.api.grpc</groupId>
