--- a/java-aiplatform/google-cloud-aiplatform-bom/pom.xml
+++ b/java-aiplatform/google-cloud-aiplatform-bom/pom.xml
@@ -11,10 +11,10 @@
     <version>0.12.0</version>
   </parent>
 
-  <name>Google AI Platform BOM</name>
+  <name>Google Cloud Vertex AI BOM</name>
   <url>https://github.com/googleapis/java-aiplatform</url>
   <description>
-    BOM for AI Platform
+    BOM for Vertex AI.
   </description>
 
   <organization>
