--- a/java-aiplatform/pom.xml
+++ b/java-aiplatform/pom.xml
@@ -5,10 +5,10 @@
   <artifactId>google-cloud-aiplatform-parent</artifactId>
   <packaging>pom</packaging>
   <version>0.4.2-SNAPSHOT</version><!-- {x-version-update:google-cloud-aiplatform:current} -->
-  <name>Google AI Platform Parent</name>
+  <name>Google Cloud Vertex AI Parent</name>
   <url>https://github.com/googleapis/java-</url>
   <description>
-    Java idiomatic client for Google Cloud Platform services.
+    Java client for Google Cloud Vertex AI services.
   </description>
 
   <parent>
