--- a/java-aiplatform/samples/install-without-bom/pom.xml
+++ b/java-aiplatform/samples/install-without-bom/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.google.cloud</groupId>
   <artifactId>aiplatform-install-without-bom</artifactId>
   <packaging>jar</packaging>
-  <name>Google AI Platform Install Without Bom</name>
+  <name>Google Cloud Vertex AI Install Without Bom</name>
   <url>https://github.com/googleapis/java-aiplatform</url>
 
   <!--
