--- a/java-aiplatform/samples/snapshot/pom.xml
+++ b/java-aiplatform/samples/snapshot/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.google.cloud</groupId>
   <artifactId>aiplatform-snapshot</artifactId>
   <packaging>jar</packaging>
-  <name>Google AI Platform Snapshot Samples</name>
+  <name>Google Cloud Vertex AI Snapshot Samples</name>
   <url>https://github.com/googleapis/java-aiplatform</url>
 
   <!--
