chore: add branch protection to 0.x-alpha branch (#457)

--- a/java-compute/.github/sync-repo-settings.yaml
+++ b/java-compute/.github/sync-repo-settings.yaml
@@ -39,6 +39,30 @@ branchProtectionRules:
   - "units (11)"
   - "Kokoro - Test: Integration"
   - "cla/google"
+- pattern: 0.x-alpha
+  # Can admins overwrite branch protection.
+  # Defaults to `true`
+  isAdminEnforced: true
+  # Number of approving reviews required to update matching branches.
+  # Defaults to `1`
+  requiredApprovingReviewCount: 1
+  # Are reviews from code owners required to update matching branches.
+  # Defaults to `false`
+  requiresCodeOwnerReviews: true
+  # Require up to date branches
+  requiresStrictStatusChecks: false
+  # List of required status check contexts that must pass for commits to be accepted to matching branches.
+  requiredStatusCheckContexts:
+  - "dependencies (8)"
+  - "dependencies (11)"
+  - "linkage-monitor"
+  - "lint"
+  - "clirr"
+  - "units (7)"
+  - "units (8)"
+  - "units (11)"
+  - "Kokoro - Test: Integration"
+  - "cla/google"
 # List of explicit permissions to add (additive only)
 permissionRules:
 - team: yoshi-admins
