--- a/java-area120-tables/google-area120-tables-bom/pom.xml
+++ b/java-area120-tables/google-area120-tables-bom/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.area120</groupId>
@@ -64,7 +64,6 @@
 
   <dependencyManagement>
     <dependencies>
-
       <dependency>
         <groupId>com.google.area120</groupId>
         <artifactId>google-area120-tables</artifactId>
@@ -72,13 +71,13 @@
       </dependency>
       <dependency>
         <groupId>com.google.api.grpc</groupId>
-        <artifactId>proto-google-area120-tables-v1alpha1</artifactId>
-        <version>0.3.2-SNAPSHOT</version><!-- {x-version-update:proto-google-area120-tables-v1alpha1:current} -->
+        <artifactId>grpc-google-area120-tables-v1alpha1</artifactId>
+        <version>0.3.2-SNAPSHOT</version><!-- {x-version-update:grpc-google-area120-tables-v1alpha1:current} -->
       </dependency>
       <dependency>
         <groupId>com.google.api.grpc</groupId>
-        <artifactId>grpc-google-area120-tables-v1alpha1</artifactId>
-        <version>0.3.2-SNAPSHOT</version><!-- {x-version-update:grpc-google-area120-tables-v1alpha1:current} -->
+        <artifactId>proto-google-area120-tables-v1alpha1</artifactId>
+        <version>0.3.2-SNAPSHOT</version><!-- {x-version-update:proto-google-area120-tables-v1alpha1:current} -->
       </dependency>
     </dependencies>
   </dependencyManagement>
