--- a/java-container/.github/CODEOWNERS
+++ b/java-container/.github/CODEOWNERS
@@ -4,9 +4,9 @@
 # For syntax help see:
 # https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners#codeowners-syntax
 
-# The @googleapis/cicd is the default owner for changes in this repo
-*                       @googleapis/yoshi-java @googleapis/cicd
-**/*.java               @googleapis/cicd
+# The @googleapis/anthos-dpe is the default owner for changes in this repo
+*                       @googleapis/yoshi-java @googleapis/anthos-dpe
+**/*.java               @googleapis/anthos-dpe
 
 # The java-samples-reviewers team is the default owner for samples changes
 samples/**/*.java       @googleapis/java-samples-reviewers
