--- a/java-dialogflow-cx/google-cloud-dialogflow-cx-bom/pom.xml
+++ b/java-dialogflow-cx/google-cloud-dialogflow-cx-bom/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.cloud</groupId>
@@ -64,21 +64,10 @@
 
   <dependencyManagement>
     <dependencies>
-
       <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-dialogflow-cx</artifactId>
         <version>0.7.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-dialogflow-cx:current} -->
-      </dependency>
-      <dependency>
-        <groupId>com.google.api.grpc</groupId>
-        <artifactId>proto-google-cloud-dialogflow-cx-v3beta1</artifactId>
-        <version>0.7.1-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-dialogflow-cx-v3beta1:current} -->
-      </dependency>
-      <dependency>
-        <groupId>com.google.api.grpc</groupId>
-        <artifactId>proto-google-cloud-dialogflow-cx-v3</artifactId>
-        <version>0.7.1-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-dialogflow-cx-v3:current} -->
       </dependency>
       <dependency>
         <groupId>com.google.api.grpc</groupId>
@@ -89,6 +78,16 @@
         <groupId>com.google.api.grpc</groupId>
         <artifactId>grpc-google-cloud-dialogflow-cx-v3</artifactId>
         <version>0.7.1-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-dialogflow-cx-v3:current} -->
+      </dependency>
+      <dependency>
+        <groupId>com.google.api.grpc</groupId>
+        <artifactId>proto-google-cloud-dialogflow-cx-v3beta1</artifactId>
+        <version>0.7.1-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-dialogflow-cx-v3beta1:current} -->
+      </dependency>
+      <dependency>
+        <groupId>com.google.api.grpc</groupId>
+        <artifactId>proto-google-cloud-dialogflow-cx-v3</artifactId>
+        <version>0.7.1-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-dialogflow-cx-v3:current} -->
       </dependency>
     </dependencies>
   </dependencyManagement>
