--- a/java-container/google-cloud-container-bom/pom.xml
+++ b/java-container/google-cloud-container-bom/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.cloud</groupId>
@@ -61,6 +61,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-container</artifactId>
+        <version>1.3.5-SNAPSHOT</version><!-- {x-version-update:google-cloud-container:current} -->
+      </dependency>
+      <dependency>
         <groupId>com.google.api.grpc</groupId>
         <artifactId>grpc-google-cloud-container-v1</artifactId>
         <version>1.3.5-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-container-v1:current} -->
@@ -69,11 +74,6 @@
         <groupId>com.google.api.grpc</groupId>
         <artifactId>proto-google-cloud-container-v1</artifactId>
         <version>1.3.5-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-container-v1:current} -->
-      </dependency>
-      <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-container</artifactId>
-        <version>1.3.5-SNAPSHOT</version><!-- {x-version-update:google-cloud-container:current} -->
       </dependency>
     </dependencies>
   </dependencyManagement>
