chore: migrate to owlbot (#513)

--- a/java-datalabeling/google-cloud-datalabeling-bom/pom.xml
+++ b/java-datalabeling/google-cloud-datalabeling-bom/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.cloud</groupId>
@@ -60,11 +60,10 @@
 
   <dependencyManagement>
     <dependencies>
-
       <dependency>
-        <groupId>com.google.api.grpc</groupId>
-        <artifactId>proto-google-cloud-datalabeling-v1beta1</artifactId>
-        <version>0.85.2-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-datalabeling-v1beta1:current} -->
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-datalabeling</artifactId>
+        <version>0.120.2-SNAPSHOT</version><!-- {x-version-update:google-cloud-datalabeling:current} -->
       </dependency>
       <dependency>
         <groupId>com.google.api.grpc</groupId>
@@ -72,9 +71,9 @@
         <version>0.85.2-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-datalabeling-v1beta1:current} -->
       </dependency>
       <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-datalabeling</artifactId>
-        <version>0.120.2-SNAPSHOT</version><!-- {x-version-update:google-cloud-datalabeling:current} -->
+        <groupId>com.google.api.grpc</groupId>
+        <artifactId>proto-google-cloud-datalabeling-v1beta1</artifactId>
+        <version>0.85.2-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-datalabeling-v1beta1:current} -->
       </dependency>
     </dependencies>
   </dependencyManagement>
