--- a/java-game-servers/google-cloud-game-servers-bom/pom.xml
+++ b/java-game-servers/google-cloud-game-servers-bom/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.cloud</groupId>
@@ -60,17 +60,6 @@
 
   <dependencyManagement>
     <dependencies>
-
-      <dependency>
-        <groupId>com.google.api.grpc</groupId>
-        <artifactId>proto-google-cloud-game-servers-v1</artifactId>
-        <version>1.2.2-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-game-servers-v1:current} -->
-      </dependency>
-      <dependency>
-        <groupId>com.google.api.grpc</groupId>
-        <artifactId>proto-google-cloud-game-servers-v1beta</artifactId>
-        <version>0.24.2-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-game-servers-v1beta:current} -->
-      </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-game-servers</artifactId>
@@ -85,6 +74,16 @@
         <groupId>com.google.api.grpc</groupId>
         <artifactId>grpc-google-cloud-game-servers-v1beta</artifactId>
         <version>0.24.2-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-game-servers-v1beta:current} -->
+      </dependency>
+      <dependency>
+        <groupId>com.google.api.grpc</groupId>
+        <artifactId>proto-google-cloud-game-servers-v1</artifactId>
+        <version>1.2.2-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-game-servers-v1:current} -->
+      </dependency>
+      <dependency>
+        <groupId>com.google.api.grpc</groupId>
+        <artifactId>proto-google-cloud-game-servers-v1beta</artifactId>
+        <version>0.24.2-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-game-servers-v1beta:current} -->
       </dependency>
     </dependencies>
   </dependencyManagement>
