feat: update project name in proto-google-apps-script-type-protos (#41)

--- a/java-gsuite-addons/proto-google-apps-script-type-protos/pom.xml
+++ b/java-gsuite-addons/proto-google-apps-script-type-protos/pom.xml
@@ -10,6 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.api.grpc</groupId>
   <artifactId>proto-google-apps-script-type-protos</artifactId>
+  <name>proto-google-apps-script-type-protos</name>
   <version>0.1.2-SNAPSHOT</version><!-- {x-version-update:proto-google-apps-script-type-protos:current} -->
 
   <dependencies>
