--- a/java-debugger-client/pom.xml
+++ b/java-debugger-client/pom.xml
@@ -81,6 +81,11 @@
         <artifactId>proto-google-cloud-debugger-client-v2</artifactId>
         <version>0.0.1-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-debugger-client-v2:current} -->
       </dependency>
+      <dependency>
+        <groupId>com.google.api.grpc</groupId>
+        <artifactId>proto-google-devtools-source-protos</artifactId>
+        <version>0.0.1-SNAPSHOT</version><!-- {x-version-update:proto-google-devtools-source-protos:current} -->
+      </dependency>
 
       <dependency>
         <groupId>com.google.cloud</groupId>
@@ -114,6 +119,7 @@
     <module>grpc-google-cloud-debugger-client-v2</module>
     <module>proto-google-cloud-debugger-client-v2</module>
     <module>google-cloud-debugger-client-bom</module>
+    <module>proto-google-devtools-source-protos</module>
   </modules>
 
   <reporting>
