--- a/java-debugger-client/proto-google-devtools-source-protos/pom.xml
+++ b/java-debugger-client/proto-google-devtools-source-protos/pom.xml
@@ -2,16 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <groupId>com.google.cloud</groupId>
-    <artifactId>google-cloud-debugger-client-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-debugger:current} -->
-  </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.api.grpc</groupId>
   <artifactId>proto-google-devtools-source-protos</artifactId>
   <version>0.0.1-SNAPSHOT</version><!-- {x-version-update:proto-google-devtools-source-protos:current} -->
   <name>proto-google-devtools-source-protos</name>
+  <parent>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-debugger-client-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-debugger-client:current} -->
+  </parent>
 
   <dependencies>
     <dependency>
