--- a/java-datacatalog/samples/install-without-bom/pom.xml
+++ b/java-datacatalog/samples/install-without-bom/pom.xml
@@ -34,6 +34,11 @@
     <!-- [END datacatalog_install_without_bom] -->
 
     <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java-util</artifactId>
+      <version>3.14.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
