--- a/java-shared-dependencies/.github/workflows/downstream.yaml
+++ b/java-shared-dependencies/.github/workflows/downstream.yaml
@@ -16,6 +16,7 @@ jobs:
           - java-bigqueryconnection
           - java-spanner
           - java-storage
+          - java-pubsub
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
