--- a/java-scheduler/.github/.OwlBot.yaml
+++ b/java-scheduler/.github/.OwlBot.yaml
@@ -16,6 +16,7 @@ docker:
   image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
+- "/samples/snippets/generated"
 - "/grpc-google-.*/src"
 - "/proto-google-.*/src"
 - "/google-.*/src"
@@ -32,3 +33,5 @@ deep-copy-regex:
   dest: "/owl-bot-staging/$1/grpc-google-cloud-scheduler-$1/src"
 - source: "/google/cloud/scheduler/(v.*)/.*-java/gapic-google-.*/src"
   dest: "/owl-bot-staging/$1/google-cloud-scheduler/src"
+- source: "/google/cloud/scheduler/(v.*)/.*-java/samples/snippets/generated"
+  dest: "/owl-bot-staging/$1/samples/snippets/generated"
