chore: include generated samples dir (#241)

--- a/java-gkehub/.github/.OwlBot.yaml
+++ b/java-gkehub/.github/.OwlBot.yaml
@@ -16,6 +16,7 @@ docker:
   image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
+- "/samples/snippets/generated"
 - "/grpc-google-.*/src"
 - "/proto-google-.*/src"
 - "/google-.*/src"
@@ -50,3 +51,5 @@ deep-copy-regex:
 
 - source: "/google/cloud/gkehub/(v.*)/.*-java/gapic-google-.*/src"
   dest: "/owl-bot-staging/$1/google-cloud-gkehub/src"
+- source: "/google/cloud/gkehub/(v.*)/.*-java/samples/snippets/generated"
+  dest: "/owl-bot-staging/$1/samples/snippets/generated"
