--- a/java-resourcemanager/.github/.OwlBot.yaml
+++ b/java-resourcemanager/.github/.OwlBot.yaml
@@ -16,6 +16,7 @@ docker:
   image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
+- "/samples/snippets/generated"
 - "/grpc-google-.*/src"
 - "/proto-google-.*/src"
 - "/google-.*/src/main/java/com/google/cloud/resourcemanager/v3/"
@@ -27,3 +28,5 @@ deep-copy-regex:
   dest: "/owl-bot-staging/$1/grpc-google-cloud-resourcemanager-$1/src"
 - source: "/google/cloud/resourcemanager/(v.*)/.*-java/gapic-google-.*/src"
   dest: "/owl-bot-staging/$1/google-cloud-resourcemanager/src"
+- source: "/google/cloud/resourcemanager/(v.*)/.*-java/samples/snippets/generated"
+  dest: "/owl-bot-staging/$1/samples/snippets/generated"
