--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -17,17 +17,26 @@ jobs:
         echo "This is a new file from pull request." >> NEW_FILE.md
         git config user.email "google-cloud-java-automation[bot]@users.noreply.github.com"
         git config user.name "google-cloud-java-automation"
+        git checkout -b pull-request-from-github-actions
+        git add --all
+        git commit -m 'build: adding a new file'
+    - run: |
+        gh pr create --draft \
+            --title='ci: suztomo pull request test' \
+            --body='Pull request from gh command' \
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #        git add --all
 #        git commit -m 'build: adding a new file'
-    - run: |
-        code-suggester pr --upstream-owner=googleapis --upstream-repo=google-cloud-java \
-            --title='suztomo code-suggester test' \
-            --description='This is test by suztomo' \
-            --message='This is commit message via code-suggester' \
-            --git-dir=.
-      env:
-        ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
-    - run: |
-        echo "Log level: ${{ github.event.inputs.logLevel }}"
-        echo "Tags: ${{ github.event.inputs.tags }}"
+
+# https://github.com/suztomo/google-cloud-java/runs/7004213626?check_suite_focus=true#step:6:66
+#    - run: |
+#        code-suggester pr --upstream-owner=googleapis --upstream-repo=google-cloud-java \
+#            --title='suztomo code-suggester test' \
+#            --description='This is test by suztomo' \
+#            --message='This is commit message via code-suggester' \
+#            --git-dir=.
+#      env:
+#        ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
 
