--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -13,6 +13,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: 'googleapis/google-cloud-java'
+        token: ${{ secrets.GITHUB_TOKEN }}
     - run: |
         echo "This is a new file from pull request." >> NEW_FILE.md
         git config user.email "google-cloud-java-automation[bot]@users.noreply.github.com"
@@ -21,6 +22,7 @@ jobs:
         git add --all
         git commit -m 'build: adding a new file'
     - run: |
+        git push -u origin HEAD
         gh pr create --draft \
             --title='ci: suztomo pull request test' \
             --body='Pull request from gh command' \
