feat: create CoverageAggregator module

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
     <module>java-websecurityscanner</module>
     <module>java-workflow-executions</module>
 
+    <module>CoverageAggregator</module>
   </modules>
 
   <build>
