--- a/.github/workflows/googleapis_hermetic_sync.yaml
+++ b/.github/workflows/googleapis_hermetic_sync.yaml
@@ -1,6 +1,7 @@
 name: Googleapis Sync (Hermetic Build)
 on:
   workflow_dispatch:
+  pull_request:
 jobs:
   create-pull-request:
     name: Create pull request for recent googleapis changes
