--- a/.github/workflows/test_code-suggester.yaml
+++ b/.github/workflows/test_code-suggester.yaml
@@ -1,10 +1,10 @@
-name: Googleapis Sync (Hermetic Build)
+name: Code Suggester TEst
 on:
   workflow_dispatch:
   pull_request:
 jobs:
   create-pull-request:
-    name: Create pull request for recent googleapis changes
+    name: Create pull request for changes
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -48,7 +48,7 @@ jobs:
         title: 'chore: googleapis change propagation via hermetic build'
         message: 'chore: googleapis change propagation mark'
         # Upon main branch cutover, change it to 'googleapis-sync'
-        branch: monorepo_script_output-googleapis-sync
+        branch: monorepo_script_output
         # Upon main branch cutover, change it to main
         primary: monorepo_script_output
         force: true
