ci: use default branch

--- a/.github/workflows/test_code-suggester.yaml
+++ b/.github/workflows/test_code-suggester.yaml
@@ -49,7 +49,7 @@ jobs:
         title: 'chore: googleapis change propagation via hermetic build'
         message: 'chore: googleapis change propagation mark'
         # Upon main branch cutover, change it to 'googleapis-sync'
-        branch: monorepo_script_output
+        # branch: monorepo_script_output
         # Upon main branch cutover, change it to main
         primary: monorepo_script_output
         force: true
