testing release-please PR generation

--- a/java-accessapproval/pom.xml
+++ b/java-accessapproval/pom.xml
@@ -83,7 +83,7 @@
       </dependency>
 
       
-      <!-- Test -->
+      <!-- Test new -->
       <!-- Test dependencies -->
       <dependency>
         <groupId>junit</groupId>
