--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,10 +4,10 @@
   "include-component-in-tag": true,
   "packages": {
     "java-accessapproval": {
-      "component": "java-accessapproval",
+      "component": "java-accessapproval"
     },
     "java-accesscontextmanager": {
-      "component": "java-accesscontextmanager",
+      "component": "java-accesscontextmanager"
     }
   },
   "plugins": [
