--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,4 +1,4 @@
 {
-  "java-accessapproval": "2.3.0",
-  "java-accesscontextmanager": "1.3.1"
+  "google-cloud-accessapproval": "2.3.0",
+  "google-identity-accesscontextmanager": "1.3.0"
 }
